--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,9 @@ loguru = ">=0.7.2,<0.8"
 requests = "*"
 pyepics = "*"
 
+[tool.pixi.activation]
+env = { cHERMES_DIR = "$PIXI_PROJECT_ROOT/src/chermes", PATH = "$PIXI_PROJECT_ROOT/src/chermes/bin:$PATH"}
+
 [tool.pixi.tasks]
 # PyPi packaging tasks
 build-pypi = { cmd = "python -m build", description = "Build the package for PyPI" }
@@ -106,14 +109,14 @@ clean-conda = { cmd = "sh -c \"find conda.recipe/* ! -name 'meta.yaml' -exec rm 
 # Documentation tasks
 build-docs = { cmd = "sphinx-build -b html docs docs/_build", description = "Build the documentation" }
 clean-docs = { cmd = "rm -rf docs/_build", description = "Clean the documentation build artifacts" }
-# Testing tasks
-test = { cmd = "pytest tests --cov-branch --cov=src/pleiades --cov-report=term --cov-report=xml", description = "Run the tests" }  # pytest config above takes care of the arguments
-clean-test = { cmd = "rm -rf .pytest_cache .coverage coverage.xml", description = "Clean the test cache" }
 # Development tasks
 lint = { cmd = "ruff check .", description = "Run linting checks" }
 format = { cmd = "ruff format .", description = "Format code with ruff" }
 pre-commit-install = { cmd = "pre-commit install", description = "Install pre-commit hooks" }
 pre-commit-run = { cmd = "pre-commit run --all-files", description = "Run pre-commit on all files" }
+# C++ build tasks
+build-cpp = { cmd = "cd src/chermes && make", description = "Build the C++ tpx3SpidrUnpacker" }
+clean-cpp = { cmd = "cd src/chermes && make clean", description = "Clean C++ build artifacts" }
 # Clean all
-clean-all = { description = "Clean all build artifacts", depends-on = ["clean-pypi", "clean-conda", "clean-docs", "clean-test"] }
+clean-all = { description = "Clean all build artifacts", depends-on = ["clean-pypi", "clean-conda", "clean-docs", "clean-test", "clean-cpp"] }
 
