Adjusted default config to not include LANL directories

--- a/src/chermes/unpacker.config
+++ b/src/chermes/unpacker.config
@@ -1,11 +1,11 @@
 # Path to folder with .tpx3 files
-rawTPX3Folder = /home/fp05user/DATA/data_process2/data/RC25/SourceTest/Unpacker_tests/tpx3Files
+rawTPX3Folder = PATH/TO/YOUR/FOLDER
 
 # File to process (or use ALL for batch mode)
 rawTPX3File = ALL
 
 # Output directory
-outputFolder = /home/fp05user/DATA/data_process2/data/RC25/SourceTest/Unpacker_tests/rawSignalFiles
+outputFolder = PATH/TO/YOUR/FOLDER
 
 # Signal processing options
 writeRawSignals = true
