--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ markers = [
 # ------------------------------ #
 [tool.pixi.workspace]
 channels = ["conda-forge"]
-platforms = ["linux-64", "osx-arm64"]
+platforms = ["linux-64", "osx-arm64", "osx-64"]
 
 [tool.pixi.pypi-dependencies]
 hermes = { path = ".", editable = true }
@@ -94,6 +94,7 @@ pyepics = "*"
 c-compiler = "*"
 cxx-compiler = "*"
 make = "*"
+tqdm = ">=4.67.1,<5"
 
 [tool.pixi.activation]
 env = { cHERMES_DIR = "$PIXI_PROJECT_ROOT/src/chermes", PATH = "$PIXI_PROJECT_ROOT/src/chermes/bin:$PATH"}
