--- a/examples/scripts/acquire_data/acquireTpx3.ini
+++ b/examples/scripts/acquire_data/acquireTpx3.ini
@@ -9,7 +9,7 @@ path_to_preview_files = previewFiles/
 path_to_raw_files = tpx3Files/
 
 [ServerConfig]
-serverurl = http://localhost:8080       # 
+serverurl = http://localhost:8080 
 path_to_server = [PATH/TO/TPX3/SERVAL]
 path_to_server_config_files = [/PATH/TO/CAMERASETTINGS/FROM/SERVAL/DIR]
 bpc_file_name = settings.bpc
