--- a/examples/scripts/acquire_data/acquireTpx3.ini
+++ b/examples/scripts/acquire_data/acquireTpx3.ini
@@ -26,3 +26,9 @@ trigger_delay_in_seconds = 0
 number_of_triggers = 1
 number_of_runs = 4
 global_timestamp_interval_in_seconds = 1
+
+[Zaber]
+enabled = true
+channel = 1
+start_voltage = 2.0
+end_voltage = 5.0
