Add HTTP status codes documentation and refactor server configuration management

--- a/examples/scripts/acquire_data/server_config.ini
+++ b/examples/scripts/acquire_data/server_config.ini
@@ -1,7 +1,7 @@
 [ServerConfig]
 serverurl = http://localhost:8080
 path_to_server = [PATH/TO/TPX3/SERVAL]
-path_to_server_config_files = [/PATH/TO/CAMERASETTINGS/FROM/SERVAL/DIR]
+path_to_server_config_files = CameraConfig/camera_files
 bpc_file_name = settings.bpc
 dac_file_name = settings.bpc.dacs
 destinations_file_name = initial_server_destinations.json
