--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,6 +105,7 @@ pip = ">=25.2,<26"
 pytest = ">=8.0.0,<9"
 pytest-cov = ">=6.0.0,<7"
 pytest-mock = ">=3.14.0,<4"
+aiohttp = ">=3.13.0,<4"
 
 [tool.pixi.activation]
 env = { cHERMES_DIR = "$PIXI_PROJECT_ROOT/src/chermes", PATH = "$PIXI_PROJECT_ROOT/src/chermes/bin:$PATH"}
